REGRESSION(r154708): It broke all plugin tests on GTK and Qt WK1 https://bugs.webkit.org/show_bug.cgi?id=120398

Reviewed by Anders Carlsson.

* bridge/c/c_class.cpp:
(JSC::Bindings::CClass::methodNamed): Keep the pointer of the new CMethod object
to return it after it's adopted by the new HashMap entry.
(JSC::Bindings::CClass::fieldNamed): The pointer to the newly created CField object
should be returned in this branch, matching the behavior before r154708.


Canonical link: https://commits.webkit.org/138381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154741 268f45cc-cd09-0410-ab3c-d52691b4dbfc